--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     margin-top: 100px;
     width: 450px;
     height: auto;
-    background: #dedede;
+    background: #281eb280;
     border-radius: 8px;
 }
 .label{
